--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,10 @@
     "ethers": "^5.7.2",
     "firebase": "^9.13.0",
     "firebase-admin": "^11.3.0",
+    "i18next": "^22.4.15",
     "next": "13.1.6",
     "next-auth": "^4.22.0",
+    "next-i18next": "^13.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.1",
