--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -1,29 +1,11 @@
 {
-  "name": "pump_me",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "cd33",
-  "license": "MIT",
-  "scripts": {
-    "deploy": "yarn hardhat clean && yarn hardhat run scripts/deploy.ts --network localhost"
+  "name": "hardhat-project",
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "hardhat": "^2.14.0"
   },
   "dependencies": {
-
-    "@openzeppelin/contracts": "^4.8.1",
-    "@typechain/ethers-v5": "^10.2.0",
-    "@typechain/hardhat": "^6.1.5",
-    "@types/chai": "^4.3.4",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^18.11.18",
-    "chai": "^4.3.7",
-    "dotenv": "^16.0.3",
-    "ethers": "^5.7.2",
-    "hardhat": "^2.12.6",
-    "hardhat-gas-reporter": "^1.0.2",
-    "prettier-plugin-solidity": "^1.1.1",
-    "solidity-coverage": "^0.7.22",
-    "ts-node": "^10.9.1",
-    "typechain": "^8.1.1",
-    "typescript": "^4.9.4"
+    "@openzeppelin/contracts": "^4.8.3",
+    "dotenv": "^16.0.3"
   }
 }
