--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.10.9",
+    "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.107",
     "@mui/material": "^5.11.16",
     "@next/font": "13.1.6",
@@ -31,6 +31,7 @@
     "next-i18next": "^13.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.2",
     "react-toastify": "^9.1.1",
     "siwe": "^2.1.3",
     "styled-components": "^5.3.9",
